fixed layout issues

--- a/loopstudios-landing-page-main/styles.css
+++ b/loopstudios-landing-page-main/styles.css
@@ -2,8 +2,9 @@
     background-image: url("images/desktop/image-hero.jpg");
     background-size: 100% 100%;
     width: 100vw;
-    height: 50vh;    
+    height: auto;    
     color: white;
+    padding-bottom: 100px;
 
 }
 
@@ -14,10 +15,9 @@
 .headertext {
     border-style: solid;
     border-width: 2px;
-    margin: 50px;
     font-size: 35pt;
-    width: 40%;
-    padding-right: 10vw;
+    width: 30%;
+    margin-left: 10%;
 }
 
 .flexcontainer {
@@ -34,7 +34,7 @@
 
 .vrimage img {
     float: left;
-    width: 60%;
+    width: 80%;
     z-index: 1;
     position: absolute;
 }
@@ -43,17 +43,17 @@
     border-style: solid;
     border-color: white;
     padding: 50px;
-    width: 40%;
+    width: 80%;
     position: relative;
     background-color: white;
-    margin-top: 15%;
-    margin-left: 52%;
+    margin-top: 30%;
+    margin-left: 70%;
     z-index: 2;
 }
 
 .ourcreations {
     width: 100%;
-    padding-left: 50px;
+    margin-left: 10%;    
     margin-top: 15%;
 }
 
@@ -63,7 +63,7 @@
 
 .button {
     float: right;
-    margin-right: 10%;
+    margin-right: 30%;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
@@ -72,6 +72,12 @@
 
 .container {
     margin-top: 20%;
+    width: 100%;
+    margin-left: 10%;
+}
+
+.row {
+    width: 100%;
 }
 
 .text-left {
@@ -82,4 +88,5 @@
 
 .position-relative {
     padding-top: 20px;
+    width: 100%;
 }
